samples/_failures_safe/1761659247_a1f5f0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b51be82.c: In function ‘primMST’:
./samples/SAFE/__tmp_0b51be82.c:153:13: error: expected expression at end of input
  153 |             for (
      |             ^~~
./samples/SAFE/__tmp_0b51be82.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0b51be82.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0b51be82.c:153:13: error: expected declaration or statement at end of input
